--- a/marineTraficNoSQL/requirements.txt
+++ b/marineTraficNoSQL/requirements.txt
@@ -1,37 +1,47 @@
-appnope==0.1.2
-backcall==0.2.0
+affine==2.3.0
+attrs==20.3.0
+certifi==2020.11.8
+chardet==4.0.0
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.7.1
+contextily==1.0.1
 cycler==0.10.0
 decorator==4.4.2
-ipykernel==5.4.2
-ipython==7.19.0
-ipython-genutils==0.2.0
-jedi==0.18.0
+descartes==1.1.0
+Fiona==1.8.18
+geog==0.0.2
+geographiclib==1.50
+geopandas==0.8.1
+geopy==2.0.0
+idna==2.10
 joblib==1.0.0
-jupyter-client==6.1.7
-jupyter-core==4.7.0
 kiwisolver==1.3.1
+llvmlite==0.34.0
+mapclassify==2.4.2
 matplotlib==3.3.3
-mysql-connector==2.2.9
-mysql-connector-python==8.0.22
+mercantile==1.1.6
+munch==2.5.0
+networkx==2.5
+numba==0.51.2
 numpy==1.19.4
-pandas==1.1.5
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.0
-prompt-toolkit==3.0.8
-protobuf==3.14.0
-ptyprocess==0.6.0
-Pygments==2.7.3
+pandas==1.1.4
+Pillow==8.0.1
+psycopg2-binary==2.8.6
+pymongo==3.11.1
 pyparsing==2.4.7
+pyproj==3.0.0.post1
+pyshp==2.1.3
 python-dateutil==2.8.1
-pytz==2020.5
-pyzmq==20.0.0
+pytz==2020.4
+rasterio==1.1.8
+requests==2.25.1
+Rtree==0.9.7
 scikit-learn==0.24.0
-scipy==1.5.4
+scipy==1.6.0
+seaborn==0.11.1
+Shapely==1.7.1
 six==1.15.0
-sklearn==0.0
+snuggs==1.4.7
 threadpoolctl==2.1.0
-tornado==6.1
-traitlets==5.0.5
-wcwidth==0.2.5
+urllib3==1.26.2
